# calibration_kit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-bionic.yml  ubuntu-focal.yml
calibration_algorithm/camera_calibration/: CMakeLists.txt
calibration_algorithm/camera_calibration/src/: intrinsic_calib.cc  stereo_calib.cc
calibration_algorithm/camera_calibration/src/calib/: CameraCalibration.cc  StereoCameraCalibration.cc
calibration_algorithm/camera_calibration/src/chessboard/: Chessboard.cc
calibration_algorithm/lidar2lidar/: CMakeLists.txt  convert.cpp  lidar2lidar.cpp
calibration_algorithm/lidar_align/: CMakeLists.txt
calibration_algorithm/lidar_align/include/lidar_align/: aligner.h  conf_parser.h  eigen_quaternion_parameterization.h  loader.h  pose_error.h  sensors.h  transform.h
calibration_algorithm/lidar_align/src/: aligner.cpp  eigen_quaternion_parameterization.cpp  lidar_align_node.cpp  loader.cpp  sensors.cpp
calibration_algorithm/lidar_camera_calib/: CMakeLists.txt  lidar_camera_calib.cc  lidar_camera_calib.hpp  main.cpp
docker/: calib_kit_docker_start.sh  calibration_kit.Dockerfile  docker-compose.yml
src/: main.cpp  nonlinear_optimization_demo.cpp  tui_tools.h
test_data/lidar2camera/: 1.pcd  front_6mm_extrinsics.yaml  front_6mm_intrinsics.yaml
test_data/lidar2imu/: conf.ini
test_data/lidar2lidar/: 1_xyz.pcd  2_xyz.pcd
